--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,41 +1,16 @@
-a {  
-  text-decoration: none !important;
-}
+// Fonts
+@import url('https://fonts.googleapis.com/css?family=Nunito:400,400i,600,700');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:400,600,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Bungee&display=swap');
 
-h1 {  
-  font-family: Staatliches !important;
-  font-size: 120px !important;
-}
+@import './all';
 
-.category {
-  font-family: Staatliches !important;
-  font-weight: 500 !important;
-}
-
-.title {
-  letter-spacing: 0.4px !important;
-  font-size: 22px !important;
-  font-size: 1.375rem !important;
-  line-height: 1.13636 !important;
-}
-
-.banner {
-  margin: 20px !important;
-  height: 800px !important;
-}
-
-.editor {
-  font-size: 16px !important;
-  font-size: 1rem !important;
-  line-height: 1.75 !important;
-}
-
-.uk-navbar-container {
-  background: #fff !important;
-  font-family: Staatliches !important;
-}
-
-img:hover {  
-  opacity: 1 !important;
-  transition: opacity 0.25s cubic-bezier(0.39, 0.575, 0.565, 1) !important;
-}
+@import '../../components/card';
+@import '../../components/articles';
+@import '../../components/nav';
+@import '../../components/sidebar';
+@import '../../components/share';
+@import '../../components/footer';
+@import '../../templates/article';
+@import '../../templates/category';
+@import '../../pages/index';
