metas + style article

--- a/src/components/_share.scss
+++ b/src/components/_share.scss
@@ -9,6 +9,7 @@ $brand-colors: (
 
 .post-social {
   button.button {
+    background-color: transparent;
     margin: 0.5rem 0.25rem;
     padding: 0 0.75rem;
     font-size: 1.6rem;
