--- a/src/components/_card.scss
+++ b/src/components/_card.scss
@@ -4,6 +4,11 @@
   .card-image {
     position: relative;
     overflow: hidden;
+    height: 240px;
+
+    .image {
+      height: 100%;
+    }
     .card-title {
       color: $light;
       position: absolute;
@@ -57,6 +62,7 @@
 
   .image-wrapper {
     width: 100%;
+    height: 100%;
   }
 
   .tag {
@@ -68,15 +74,10 @@
 
   .excerpt {
     padding: 1rem 0;
-  }
-}
-
-@keyframes zoom {
-  from {
-    transform: scale(1);
-  }
-
-  to {
-    transform: scale(1.5);
+    height: 4rem;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
   }
 }
