--- a/src/components/_footer.scss
+++ b/src/components/_footer.scss
@@ -1,7 +1,11 @@
 .footer {
-  position: relative;
+  position: fixed;
+  width: 100vw;
+  height: $footer-height;
   bottom: 0;
+  z-index: 10;
   .content {
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -10,39 +14,27 @@
       margin-bottom: 0;
     }
 
-    .socials {
-      font-size: 2rem;
-      display: flex;
-      .social {
-        &:not(:last-child) {
-          margin-right: $pm-size-medium;
-        }
+    .fa-heart {
+      border-radius: $radius-rounded;
+      box-shadow: 0 0 0 0 rgba(255, 82, 82, 1);
+      animation: pulse-red 2s infinite;
+    }
 
-        &:hover {
-          i {
-            @include animation('grow_color' 1s infinite);
-          }
-        }
+    @keyframes pulse-red {
+      0% {
+        transform: scale(0.95);
+        box-shadow: 0 0 0 0 rgba(255, 82, 82, 0.7);
+      }
 
-        i {
-          color: $primary;
-        }
+      70% {
+        transform: scale(1);
+        box-shadow: 0 0 0 10px rgba(255, 82, 82, 0);
+      }
+
+      100% {
+        transform: scale(0.95);
+        box-shadow: 0 0 0 0 rgba(255, 82, 82, 0);
       }
     }
   }
-}
-
-@keyframes grow_color {
-  0% {
-    transform: scale(1);
-    color: $primary;
-  }   
-  50% {
-    transform: scale(1.2);
-    color: $light;
-  }
-  100% {
-    transform: scale(1);
-    color: $primary;
-  }          
 }
